environments/dev/patient-viewer/base/patientviewer-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "patient-viewer-dev"
  labels:
    name: "patient-viewer-dev"
