environments/dev/patient-viewer/base/patientviewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-viewer-dev
  namespace: daybreak-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-viewer-dev
  template:
    metadata:
      labels:
        app: patient-viewer-dev
    spec:
      containers:
      - name: patient-viewer
        image: image-registry.openshift-image-registry.svc:5000/daybreak-dev/patient-viewer-dev
