environments/dev/patient-viewer/base/patientviewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-viewer-dev
  namespace: daybreak-dev
  labels:
    app: patient-viewer-dev
    app.kubernetes.io/component: patient-viewer-dev
    app.kubernetes.io/instance: patient-viewer-dev
    app.kubernetes.io/name: patient-viewer-dev
    app.kubernetes.io/part-of: patient-viewer-dev
spec:
  selector:
    app: patient-viewer-dev
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
