environments/dev/patient-viewer/base/patientviewer-route.yaml
apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: patient-viewer-dev
      app.kubernetes.io/component: patient-viewer-dev
      app.kubernetes.io/instance: patient-viewer-dev
      app.kubernetes.io/name: patient-viewer-dev
      app.kubernetes.io/part-of: patient-viewer-git-dev
    name: patient-viewer-dev
    namespace: patient-viewer-dev
  spec:
    host: patient-viewer-dev-patient-viewer-dev.apps-crc.testing
    port:
      targetPort: 8080-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: patient-viewer-dev
      weight: 100
    wildcardPolicy: None
